Fixed Home
Changed Margin-Top again to fix white space on home page. There is now a white space to fix at the bottom.

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 }
 
 .main-content {
-    margin-top: 80px;
+    margin-top: 75px;
 }
 
 .page-borders {
